--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EMAIL=your_email@gmail.com
-PASSWORD=your_email_password_or_app_password
+EMAIL=stxtechinc@gmail.com
+PASSWORD=9804816889A@
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
